--- a/src/popup/package.json
+++ b/src/popup/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.195",
     "@types/node": "^18.7.9",
     "@vitejs/plugin-vue": "^3.0.3",
     "autoprefixer": "^10.4.8",
