--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
-  "name": "reloader-notifier",
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "watch:app": "cd src/app && yarn watch",
-    "watch:pop": "cd src/popup && yarn watch",
-    "watch:bg": "cd src/background && yarn watch",
-    "dev": "concurrently \"yarn watch:app\" \"yarn watch:bg\"",
-    "dev:popup": "cd src/popup && yarn dev"
-  },
-  "keywords": [
-    "chrome",
-    "reloader",
-    "extension"
-  ],
-  "author": "RK Anik",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/chrome": "^0.0.195"
-  },
-  "dependencies": {
-    "concurrently": "^7.3.0"
-  }
+	"scripts": {
+		"watch": "webpack --watch --progress"
+	},
+	"devDependencies": {
+		"@types/chrome": "^0.0.195",
+		"@types/lodash": "^4.14.184",
+		"ts-loader": "^9.3.1",
+		"typescript": "^4.7.4",
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"lodash": "^4.17.21"
+	}
 }
