--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,15 @@
 {
   "compilerOptions": {
-    "module": "AMD",
-    "target": "ES6",
-    "moduleResolution": "node"
-  }
+    "outDir": "./build/",
+    "noImplicitAny": false,
+    "module": "es6",
+    "target": "es5",
+    "allowJs": true,
+    "moduleResolution": "node",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@@/*": ["./common/*"]
+    }
+  },
+  "exclude": ["./popup/**"]
 }
